--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
