--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.5.4",
     "intl-tel-input": "^24.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
