--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "framer-motion": "^11.5.4",
     "intl-tel-input": "^24.0.1",
     "react": "^18.3.1",
