--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "tailwind-scrollbar-hide": "^1.1.7"
