--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
-    "react-select": "^5.8.0",
+    "react-select": "^5.9.0",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
