--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.5.4",
     "intl-tel-input": "^24.0.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
@@ -23,6 +24,7 @@
     "react-select": "^5.9.0",
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
+    "react-string-replace": "^1.1.1",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
